# pagenerator

./: .gitignore  CLAUDE.md  INSTALL.txt  MANIFEST.in  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
pagenerator/: cli.py
pagenerator/scripts/: pagenerator
samples/: source.md  template.html
samples/source_dir/: bar.md  index.md
samples/source_dir/sub/: bar.md  index.md
samples/source_dir/sub/2/: foo.md  index.md
tests/: test_cli.py
