[project]
name = "pagenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["markdown>=3.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pagenerator = "pagenerator.cli:main"

[tool.uv]
dev-dependencies = ["pytest>=8.4.1", "ruff>=0.9.6", "yamllint>=1.35.1"]

[tool.pyright]
reportDeprecated = "error"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
